---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: "String::from_utf8(buf).unwrap()"
---
Error: expected paren after args indicator
   ╭─[<test>:1:9]
   │
 1 │ def x : do echo hi end
   │       ┬  
   │       ╰── after this indicator
───╯

